fix: fixes & dev mode implementation